--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
