--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "prebuild": "npm run lint",
     "compile": "tsc --pretty --declaration && webpack",
-    "build": "rimraf dist && npm run compile && npm run gendoc",
+    "build": "rimraf dist && npm run compile",
     "lint": "eslint --fix src/**/*.ts",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "gendoc": "typedoc --out docs ./src"
@@ -32,21 +32,21 @@
     "lint"
   ],
   "devDependencies": {
-    "@types/chai": "4.3.0",
-    "@types/mocha": "9.1.0",
-    "@types/node": "17.0.18",
-    "@typescript-eslint/eslint-plugin": "5.12.0",
-    "@typescript-eslint/parser": "5.12.0",
+    "@types/chai": "4.3.3",
+    "@types/mocha": "9.1.1",
+    "@types/node": "18.7.18",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
     "chai": "4.3.6",
-    "eslint": "8.9.0",
-    "mocha": "9.2.1",
+    "eslint": "8.23.1",
+    "mocha": "10.0.0",
     "rimraf": "3.0.2",
-    "ts-loader": "9.2.6",
-    "ts-node": "10.5.0",
-    "typedoc": "0.22.11",
-    "typescript": "4.5.5",
-    "webpack": "5.69.1",
-    "webpack-cli": "4.9.2"
+    "ts-loader": "9.4.1",
+    "ts-node": "10.9.1",
+    "typedoc": "0.23.15",
+    "typescript": "4.8.3",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0"
   },
   "license": "MIT"
 }
